<resources>
    <string name="app_name">Servio Statistic</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_sync">Обмен данными</string>
    <string name="action_settings">Настройки</string>
    <string name="action_exit">Выход</string>

    <string name="summary_static">Итоговая статистика</string>
    <string name="sales">Продажи товаров</string>
    <string name="report_manager">Отчёт менеджера</string>
    <string name="download_forecast">Прогноз загрузки</string>

    <string name="service">Сервис</string>
    <string name="hms">HMS</string>

    <string name="login">Логин</string>
    <string name="password">Пароль</string>


    <!--AlertDialog-->
    <string name="questions_exit">Вы уверены, что хотите выйти?</string>
    <string name="questions_select_element">Выбрать елемент?</string>
    <string name="questions_title_info">Инфо</string>
    <string name="questions_answer_yes">Да</string>
    <string name="questions_answer_save">Сохранить</string>
    <string name="questions_answer_no">Нет</string>
    <string name="questions_answer_cancel">Отменить</string>
    <string name="questions_answer_ok">Ок</string>
    <string name="welcome">"Добро пожаловать!"</string>
    <string name="questions_answer_form">Сформировать</string>

    <!-- Synchronization-->

    <string name="loading_title">Загрузка. Подождите...</string>   //  "Loading. Please wait..."
    <string name="sync_success">Синхронизация успешная.</string>
    <string name="sync_error">Ошибка синхронизации.</string>
    <string name="sync_cancel">Отменено синхронизацию.</string>
    <string name="sync_timeout">Закончилось время синхронизации.</string>
    <string name="auth_error">Неверные логин или пароль.</string>
    <string name="error_connection_server">Соединение с сервером не установлено! Возможно адрес сервера заполнен некорректно.</string>
    <string name="error_data_not_found">Данные не найдено!</string>
    <string name="error_no_data">Отсутствуют данные!</string>
    <string name="error_data_server">Ошибка обработки данных на сервере!</string>
    <string name="error_retrieving_data">Ошибка получения данных!</string>
    <string name="error_internet_connecting">Отсутствует соединение с интернетом!</string>
    <string name="questions_cancel_download_data">Отменить загрузку данных ?</string>
    <string name="select_from_the_list">Выберите из списка</string>
    <string name="select">Выберите</string>

    <string name="error_field_required">Эти данные есть обязательными</string>

    <string name="double_press_exit">Пожалуйста, нажмите еще раз НАЗАД, чтоб закрыть приложение</string>

    <!-- filter-->
    <string name="date_start">Дата с</string>
    <string name="date_end">Дата по</string>
    <string name="objectview">Просмотр</string>
    <string name="objecttype">Тип счёта\смены</string>
    <string name="filter">"Настройки"</string>

    <string name="objectview_0">"Счета"</string>
    <string name="objectview_1">"Смены"</string>

    <string name="objecttype_0">"Открыт"</string>
    <string name="objecttype_1">"Закрыт"</string>
    <string name="objecttype_2">"Все"</string>
    <string name="compare_period_error">Дата начала должна быть менше даты окончания</string>

    <string name="no_selectedorder">Не выбран отчет</string>

    <!-- table-->
    <string name="table_report_no_data">Нет данных</string>

    <string name="zero">0</string>
    <string name="guestcount_cap">Количество гостей</string>
    <string name="billcount_cap">Счетов за период</string>
    <string name="billopenedcount_cap">Открытых счетов</string>
    <string name="billopenedtotal_cap">Сумма откр. счетов</string>
    <string name="sumguest_cap">Выручка за период</string>
    <string name="billtotalreturn_cap">Сумма возврата</string>
    <string name="billcountreturn_cap">Чеков возврата</string>

    <string name="average_sumguest_cap">Сред. сумма по гостю</string>
    <string name="average_sumbill_cap">Сред. сумма по чеку</string>
    <string name="average_guestcount_cap">Сред. кол-во гостей</string>
    <string name="decreasecount_cap">Отказов от блюд</string>
    <string name="decreasesum_cap">Сумма отказов</string>
    <string name="tax1_cap">Налог 1</string>
    <string name="tax2_cap">Налог 2</string>

    <string name="by">По </string>

    <string name="groupdiscountcap">Скидки по группам</string>
    <string name="groupdiscount">Дисконтная группа</string>
    <string name="bills">Счетов</string>
    <string name="discont">Скидка</string>
    <string name="paid_for">Бонус</string>
    <string name="total">Итого</string>

    <string name="manualdiscountcap">Ручные скидки</string>
    <string name="manualdiscountcap_percent">Процент скидки</string>
    <string name="manualdiscountcap_sum">На сумму</string>

    <string name="paymentcap">По типам оплат</string>
    <string name="paymenttype_name">Тип оплаты</string>
    <string name="paymenttype_fiscal">Фиск</string>
    <string name="paymenttype_accrual">Без скидки</string>
    <string name="paymenttype_discont">Скидка</string>
    <string name="paymenttype_payment">Оплачено</string>

    <string name="sectioncap">По отделам</string>
    <string name="sectioncap_name">Отдел</string>
    <string name="sectioncap_amount">Кол-во</string>
    <string name="sectioncap_accrual">Без скидки</string>
    <string name="sectioncap_discont">Скидка</string>
    <string name="sectioncap_payment">Оплачено</string>

    <string name="hallcap">По залам</string>
    <string name="hallcap_name">Зал</string>
    <string name="hallcap_bills">Счетов</string>
    <string name="hallcap_guests">Гостей</string>
    <string name="hallcap_payment">Оплачено</string>
    <string name="hallcap_sumbill">Сумма/Гость</string>
    <string name="hallcap_sumguest">Сумма/Чек</string>

    <string name="usercap">По обслуживающим</string>
    <string name="usercap_name">Обслуживающий</string>
    <string name="usercap_bills">Счетов</string>
    <string name="usercap_guests">Гостей</string>
    <string name="usercap_payment">Оплачено</string>
    <string name="usercap_sumbill">Сумма/Гость</string>
    <string name="usercap_sumguest">Сумма/Чек</string>

    <string name="salescap_name">Наименование</string>
    <string name="salescap_amount">Кол-во</string>
    <string name="salescap_subtotal">Без скидки</string>
    <string name="salescap_discount">Скидка</string>
    <string name="salescap_basetotal">Со скидкой</string>
    <string name="salescap_tax1">Налог 1</string>

</resources>
