<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_summary_static"
            android:icon="@drawable/ic_statistics"
            android:title="@string/summary_static"/>
        <item
            android:id="@+id/nav_sales"
            android:icon="@drawable/ic_sales"
            android:title="@string/sales"/>
    </group>

    <item android:title="@string/hms">
        <menu>
            <item
                android:id="@+id/nav_report_manager"
                android:icon="@drawable/ic_report"
                android:title="@string/report_manager"/>
            <item
                android:id="@+id/nav_download_forecast"
                android:icon="@drawable/ic_forecast"
                android:title="@string/download_forecast"/>
        </menu>
    </item>
    <item android:title="@string/service">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/action_settings"/>
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit"
                android:title="@string/action_exit"/>
        </menu>
    </item>

</menu>
