<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/hallcap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/hallcap_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            app:srcCompat="@drawable/ic_arrow_right"
            tools:ignore="VectorDrawableCompat"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="2dp"
            android:text="@string/hallcap"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_standart"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/hallcap_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="2dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryLight"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:text="@string/hallcap_name"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_table_standart"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="2dp"
                android:layout_weight="1.1"
                android:gravity="right"
                android:text="@string/hallcap_bills"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_table_standart"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_weight="1.1"
                android:gravity="right"
                android:text="@string/hallcap_guests"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_table_standart"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_weight="1.1"
                android:gravity="right"
                android:text="@string/hallcap_payment"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_table_standart"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_weight="1.15"
                android:gravity="right"
                android:text="@string/hallcap_sumbill"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_table_standart"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_weight="1.15"
                android:gravity="right"
                android:text="@string/hallcap_sumguest"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_table_standart"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/hallcap_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryLight"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:text="@string/total"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_table_standart"/>

            <TextView
                android:id="@+id/hallcap_bills_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_weight="1.1"
                android:gravity="right"
                android:text="@string/zero"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_table_standart"/>

            <TextView
                android:id="@+id/hallcap_guests_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_weight="1.1"
                android:gravity="right"
                android:text="@string/zero"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_table_standart"/>

            <TextView
                android:id="@+id/hallcap_payment_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_weight="1.1"
                android:gravity="right"
                android:text="@string/zero"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_table_standart"/>

            <TextView
                android:id="@+id/hallcap_sumguest_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_weight="1.15"
                android:gravity="right"
                android:text="@string/zero"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_table_standart"/>

            <TextView
                android:id="@+id/hallcap_sumbill_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_weight="1.15"
                android:gravity="right"
                android:text="@string/zero"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_table_standart"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>